test/examples/invalid/test-hang.js

exports['not finished'] = function (test){
  while(true){}
}


